Wed Apr 13 16:22:12 UTC 2005  Justin Michel  <michel_j@ociweb.com>

        * TAO/orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
        * TAO/orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        
          Cleanup output messages.
          
        * TAO/orbsvcs/tests/ImplRepo/airplane_server_i.cpp:
        * TAO/orbsvcs/tests/ImplRepo/nestea_server_i.cpp:
        
          Fix tests not to activate the poa manager until the server
        is ready to accept incoming requests.
        
        * TAO/tao/ImR_Client/ServerObject.pidl:
        * TAO/tao/ImR_Client/ServerObjectA.cpp:
        * TAO/tao/ImR_Client/ServerObjectC.cpp:
        * TAO/tao/ImR_Client/ServerObjectC.h:
        * TAO/tao/ImR_Client/ServerObjectC.inl:
        * TAO/tao/ImR_Client/ServerObjectS.cpp:
        * TAO/tao/ImR_Client/ServerObjectS.h:
        * TAO/tao/ImR_Client/ServerObject_i.cpp:
        
          Change the ServerObject::shutdown operation to a oneway to prevent
        the need for a reply during shutdown. 
          Changed the ServerObject::shutdown to first destroy the root poa, so 
        that all registered child poas can notify the ImR that they are shutting
        down. (From the ImR's perspective each child POA is a separate registered
        server.)

Wed Apr 13 14:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORBInitInfo.cpp:
          Simplified some checks

Wed Apr 13 07:06:11 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/CORBALOC_Parser.cpp:
          Added an additional test for the valid condition of no key
          separator at the end of the corbaloc string.

Wed Apr 13 11:26:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Any/client.cpp:
        * tests/OBV/Any/server.cpp:
        * tests/CodeSets/simple/client.cpp:
        * tests/CodeSets/simple/server.cpp:
          Print out whether exception is caught in the client or in the server
